<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bggf"
    tools:context=".LoginActivity">

    <TextView
        android:id="@+id/textViewLoginLogo"
        android:layout_width="259dp"
        android:layout_height="135dp"
        android:fontFamily="sans-serif-black"
        android:text="Login"
        android:textColor="#950168"
        android:textSize="100sp"
        android:textStyle="bold|italic"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.554"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.156" />

    <EditText
        android:id="@+id/editTextEmail"
        android:layout_width="311dp"
        android:layout_height="55dp"
        android:autofillHints=""
        android:ems="10"
        android:fontFamily="@font/montserrat_alternates"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:textColorHint="#eba4e0"
        android:textColor="#372230"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.427"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/editTextPassword"
        android:layout_width="311dp"
        android:layout_height="55dp"
        android:autofillHints=""
        android:ems="10"
        android:fontFamily="@font/montserrat_alternates"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:textStyle="bold"
        android:textColorHint="#eba4e0"
        android:textColor="#372230"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.47"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.548"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textViewSignUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/montserrat_alternates"
        android:text="New User? Sign Up"
        android:textColor="#302a2e"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.796"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textViewForgotPW"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/montserrat_alternates"
        android:onClick="forgotPassword"
        android:text="Forgot password?"
        android:textColor="#302a2e"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.805"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.631"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/buttonLogIn"
        android:layout_width="91dp"
        android:layout_height="38dp"
        android:background="@drawable/round_button"
        android:fontFamily="@font/monofett"
        android:shadowColor="@color/cardview_dark_background"
        android:text="@string/sign_in"
        android:textColor="#A124AF"
        android:textSize="18sp"
        android:textStyle="italic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.715"
        tools:ignore="MissingConstraints" />

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        android:visibility="gone"
        />


</androidx.constraintlayout.widget.ConstraintLayout>